--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'jetty'
 apply plugin: 'application'
 
 archivesBaseName = "app"
-mainClassName = 'Main'
+mainClassName = 'main.Main'
 applicationName = 'app'
 defaultTasks = ['stage']
 
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.h2database:h2:1.4.191'
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.hibernate:hibernate-core:5.2.0.Final'
+    compile 'com.dropbox.core:dropbox-core-sdk:2.0.6'
 }
