--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.h2database:h2:1.4.191'
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.hibernate:hibernate-core:5.2.0.Final'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
